--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 <div class="topper">
-  <img class="Koh_logo1" src="IMG_0642.JPG" width="522" height="143" alt="Koh_logo.1">
+  <a href="https://koh-89.github.io/Home/"><img class="Koh_logo1" src="IMG_0642.JPG" width="522" height="143" alt="Koh_logo.1"></a>
   <div class="SNS">
     <a class="insta sns" href="https://www.instagram.com/koh_8.9"><img src="instagram_logo.png" width="72" height="74" alt="insta"></a>
     <a class="line sns" href="https://line.me/R/ti/p/%40quh2018h"><img src="LINE_SOCIAL_Basic.png" width="65" height="65" alt="line"></a>
@@ -36,14 +36,15 @@
   <h1> 疲労回復 自律神経調整</h1>
   <h2>鍼治療を行うことでホルモンが分泌され、自律神経の働きがスムーズになり、リラックス効果を得ることが出来ます。身体に疲労が溜まっている場合には、鍼に微弱な電気を流すことで、筋肉の作用を促進し、血液の循環を高め、疲労物質を取り除くといった治療法もあります。</h2>
 </div>
-<div class="footer">
-  <img class="Koh_logo2"src="IMG_0642.JPG"width="291" height="79" alt="Koh_logo2">
-  <img class="LEPRO"src="LEPRO-logo.JPG"width="98" height="91"alt="LEPRO_logo">
-  <div class="menu">
+  <div class="footer">
+    <a href="#"><img class="Koh_logo2" src="IMG_0642.JPG"width="auto" height="100" alt="Koh_logo2"></a>
+    <a href="http://www.cabella-niigata.com/"><img class="カベーラロゴ" src="カベーラロゴ.png" alt="カベーラ_logo" width="auto" height="100"></a>
+    <a href="#"><img class="LEPRO"src="LEPRO-logo.JPG"width="auto" height="100"alt="LEPRO_logo"></a>
+    <div class="menu">
     　　<a class="お問合わせ menu_con2" href="https://koh-89.github.io/yoyaku/">予約・お問合わせ</a>
       　<a class="施術メニュー menu_con2" href="https://koh-89.github.io/sejutumenu/">施術メニュー</a>
         <a class="ご挨拶 menu_con2" href="https://koh-89.github.io/goaisatu/">ご挨拶</a>
-        <a class="Home menu_con2" href="https://koh-89.github.io/Home/">HOME</a>
+        <a class="Home menu_con2" href="#">HOME</a>
     </div>
-</div>
+  </div>
 </body>
